# modern_cmake

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
cmake/: UninstallPackage.cmake.in
include/calculator/: Calculator.h
src/: Calculator.cpp  foo.cpp  internal.h
tests/: .CalculatorTest.cpp.swp  CMakeLists.txt  CalculatorTest.cpp
